--- a/challenge_2/public/index.html
+++ b/challenge_2/public/index.html
@@ -1,2 +1,10 @@
-
-
+<!DOCTYPE html>
+  <html>
+    <head>
+      <title>Crypto</title>
+    </head>
+    <body>
+      <div id="app"></div>
+      <script type="text/javascript" src="bundle.js"></script>
+    </body>
+  </html>
